--- a/indexinputtext.html
+++ b/indexinputtext.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
+    <form class="form">
+        <span>texto</span>
+        <input type="text">
+        <button>Escrever</button>
+    </form>
     <script src="index.js"></script>
 </body>
 </html>
