primeira tarefa do desafio JS- input button

--- a/indexinputtext.html
+++ b/indexinputtext.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     
 </head>
 <body>
     <form class="form">
-        <span>texto</span>
-        <input type="text">
-        <button>Escrever</button>
-    </form>
+        <span id="texto">texto</span>
+        <div>
+            <input class="write" type="text">
+            <button type="submit">Escrever</button>
+        </div>
+
     <script src="index.js"></script>
 </body>
 </html>
