--- a/desafioJSinputText/indexinputtext.html
+++ b/desafioJSinputText/indexinputtext.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Desafio JS InputText</title>
     
 </head>
 <body>
-    <form class="form">
-        <span id="texto">texto</span>
-        <div>
-            <input class="write" type="text">
-            <button type="submit">Escrever</button>
-        </div>
+    <form type="submit" class="form" action="">
+        
+            <span id="texto">texto</span>
+            <div>
+                <input class="write" type="text">
+                <button id="write-button">Escrever</button>
+            </div>
+    </form>
 
     <script src="index.js"></script>
 </body>
